
* LUCENE-10533: SpellChecker.formGrams is missing bounds check (Kevin Risden)

* LUCENE-10529: Properly handle when TestTaxonomyFacetAssociations test case randomly indexes
  no documents instead of throwing an NPE. (Greg Miller)

* LUCENE-10470: Check if polygon has been successfully tessellated before we fail (we are failing some valid
  tessellations) and allow filtering edges that fold on top of the previous one. (Ignacio Vera)  

* LUCENE-10518: Relax field consistency check for old indices (Nhat Nguyen)

Build
---------------------

* Upgrade forbiddenapis to version 3.3.  (Uwe Schindler)

Other
---------------------
* LUCENE-10526: Test-framework: Add FilterFileSystemProvider.wrapPath(Path) method for mock filesystems
  to override if they need to extend the Path implementation. (Gautam Worah, Robert Muir)

* LUCENE-10525: Test-framework: Add detection of illegal windows filenames to WindowsFS. (Gautam Worah)

* LUCENE-10541: Test-framework: limit the default length of MockTokenizer tokens to 255.
  (Robert Muir, Uwe Schindler, Tomoko Uchida, Dawid Weiss)

======================= Lucene 9.1.0 =======================

API Changes
---------------------

* LUCENE-10244: MultiCollector::getCollectors is now public, allowing users to access the wrapped
  collectors. (Andriy Redko)

* LUCENE-10197: UnifiedHighlighter now has a Builder to construct it.  The UH's setters are now
  deprecated.  (Animesh Pandey, David Smiley)

* LUCENE-10301: the test framework is now a module. All the classes have been moved from
  org.apache.lucene.* to org.apache.lucene.tests.* to avoid package name conflicts with the
  core module. (Dawid Weiss)

* LUCENE-10183: KnnVectorsWriter#writeField to take KnnVectorsReader instead of VectorValues.
  (Zach Chen, Michael Sokolov, Julie Tibshirani, Adrien Grand)

* LUCENE-10335: Deprecate helper methods for resource loading in IOUtils and StopwordAnalyzerBase